# sentinel

./: .gitignore  COPYRIGHT.md  Cargo.toml  README.md
assets/scenes/: test-load.scn.ron
crates/sentinel/: Cargo.toml
crates/sentinel/src/: lib.rs  main.rs
crates/sentinel/src/core/: mod.rs
crates/sentinel/src/core/input/: mod.rs
crates/sentinel/src/core/physics/: mod.rs
crates/sentinel/src/core/player/: mod.rs
crates/sentinel/src/core/progression/: mod.rs
crates/sentinel/src/core/progression/graph/: gates.rs  mod.rs
crates/sentinel/src/core/render/: camera.rs  mod.rs
crates/sentinel/src/core/save/: mod.rs
crates/sentinel/src/core/state/: game.rs  mod.rs
crates/sentinel/src/core/util/: dirs.rs  mod.rs  task.rs
crates/sentinel/src/core/world/: mod.rs
crates/sentinel/src/debug/: labels.rs  mod.rs  state.rs
crates/sentinel/src/debug/sandbox/: mod.rs
crates/sentinel/src/draft/: mod.rs
crates/sentinel/src/test/: mod.rs
crates/sentinel_book/: book.toml
crates/sentinel_book/src/: SUMMARY.md  about.md  copyright.md  license.md
crates/sentinel_book/src/bevy/: systems.md
crates/sentinel_graph/: Cargo.toml  README.md
crates/sentinel_graph/src/: commands.rs  components.rs  core.rs  lib.rs  util.rs
crates/sentinel_input/: Cargo.toml  README.md
crates/sentinel_input/src/: lib.rs
crates/sentinel_input/src/sink/: combo.rs  mod.rs  profile.rs
crates/sentinel_input/src/src/: hal.rs  mod.rs
crates/sentinel_inspector/: Cargo.toml  README.md
crates/sentinel_inspector/src/: lib.rs  main.rs  render.rs
crates/sentinel_old/: Cargo.toml
crates/sentinel_old/assets/scenes/: new-test.scn.ron
crates/sentinel_old/src/: main.rs
crates/sentinel_old/src/draft/: behavior.rs  (+3 more)
crates/sentinel_test/: Cargo.toml  README.md
crates/sentinel_test/src/: app.rs  exit.rs  lib.rs
src/: brains.rs  debug.rs  input.rs  lib.rs  main.rs  movement_controllers.rs  viewport.rs
src/core/: app_state.rs  mod.rs  player.rs
src/core/graph/: mod.rs
src/core/input/: mod.rs
src/core/level/: room.rs
src/core/physics/: mod.rs  movement_controller.rs
src/core/rng/: mod.rs
src/core/state_manager/: mod.rs
src/core/util/: mod.rs
src/debug/: mod.rs
src/debug/component_inspector/: mod.rs
src/draft/: assets.rs  behavior.rs  debug.rs  editor.rs  level_manager.rs  mod.rs  progression.rs  viewport.rs
src/draft/progression/: mod.rs
src/level/: manager.rs  mod.rs
src/level/player/: mod.rs
src/test/: util.rs
(+11 files in other folders)
