[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
async-fs = "2.2.0"
bevy = { version = "0.18.1", features = ["dynamic_linking", "debug"] }
futures = "0.3.32"
heapless = "0.9.3"
leafwing-input-manager = "0.20.0"
rayon = "1.12.0"
ron = "0.12.1"
thiserror = "2.0.18"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
