[package]
name = "sentinel_graph"
version = "0.1.0"
resolver = "3"
edition = "2024"
license = "MIT or APACHE-2.0"

[dependencies]
bevy = "0.18"

[dev-dependencies]
bevy = { version = "0.18", features = ["debug"] }
sentinel_test = { path = "../sentinel_test" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
